--- a/gestion_du_member.html
+++ b/gestion_du_member.html
@@ -13,7 +13,7 @@
     <nav>
       <div class="menu-icon" id="menu-icon">&#9776;</div>
       <div class="nav-links" id="nav-links">
-        <a href="index.html">Home</a>
+        <a href="Home.html">Home</a>
         <a href="index.html">Gestion du congé</a>
         <a href="gestion_du_member.html">Gestion du membre</a>
         <a href="#">Déconnexion</a>
