--- a/gestion_du_member.html
+++ b/gestion_du_member.html
@@ -5,16 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Member Management</title>
   <link rel="stylesheet" href="styles2.css">
+  <script src="main.js"></script>
+  
 </head>
 <body>
-  <header><img src="img/pngegg.png" alt="Logo"></header>
+  <header>
+    <div class="header-container">
+        <div class="slideshow slideshow-container">
+            <img src="img/145812063633_content.jpg" alt="Slideshow" class="slide active">
+            <img src="img/167905242399_content.jpg" alt="Slideshow" class="slide">
+            <img src="img/ceo-221021-00.jpg" alt="Slideshow" class="slide">
+            <img src="img/Netbox-TT-570x356-pxl.png" alt="Slideshow" class="slide">
+            <img src="img/tt-tunisie-telecome-challenges-tn.jpg" alt="Slideshow" class="slide">
+            <img src="img/Tunisie-Telecom-Horaires-double-séance.jpg" alt="Slideshow" class="slide">
+            <img src="img/Tunisie-Telecom.png" alt="Slideshow" class="slide">
+        </div>
+    </div>
+</header>
   <section class="head">
     <h2>Tunisie-Telecom</h2>
     <nav>
       <div class="menu-icon" id="menu-icon">&#9776;</div>
       <div class="nav-links" id="nav-links">
-        <a href="Home.html">Home</a>
-        <a href="index.html">Gestion du congé</a>
+        <a href="index.html">Home</a>
+        <a href="gestion_congé.html">Gestion du congé</a>
         <a href="gestion_du_member.html">Gestion du membre</a>
         <a href="#">Déconnexion</a>
       </div>
@@ -70,5 +84,9 @@
       }
     });
   </script>
+  
 </body>
+<footer>
+  <h3>contcter support : 20842876</h3>
+</footer>
 </html>
