--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
     <script src="main.js"></script>
 </body>
 <footer>
-    <h3>contcter support : 20842876</h3>
+    <h3>contacter le support</h3>
   </footer>
 </html>
