--- a/gestion_congé.html
+++ b/gestion_congé.html
@@ -81,6 +81,6 @@
   </script>
 </body>
 <footer>
-  <h3>contcter support : 20842876</h3>
+  <h3>contacter le support : 20842876</h3>
 </footer>
 </html>
